# SwigBasic

./: .gitignore  CMakeLists.txt  README.md  basic.cpp  basic.h  example.cpp  example.h  example.i  example.py  example_wrap.cpp  example_wrap.cxx  install_manifest.txt  setup.py  test.py
src/: example.cpp  example.h
swig/: examplepy.cpp  examplepy.h  swig_basic.i
swig/python/: CMakeLists.txt  setup.py  setup.py.in  swig_basic.py  test.py
